maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:34: error: ':' expected but ')' found.
def isDirectionFree(dir)
                       ^PledgeMaze:53: error: identifier expected but '}' found.
}
^